Add "--add-modules=jdk.incubator.foreign" in properties argLine and compiler plugin.